--- a/src/main/webapp/app/entities/collaborator/collaborator-update.component.html
+++ b/src/main/webapp/app/entities/collaborator/collaborator-update.component.html
@@ -13,17 +13,65 @@
                 <div class="form-group">
                     <label class="form-control-label" jhiTranslate="imputationSqliApp.collaborator.firstname" for="field_firstname">Firstname</label>
                     <input type="text" class="form-control" name="firstname" id="field_firstname"
-                        [(ngModel)]="collaborator.firstname" />
+                        [(ngModel)]="collaborator.firstname" #firstname="ngModel" minlength="5" required/>
+                    <div *ngIf="firstname.dirty && firstname.invalid">
+                        <small class="form-text text-danger"
+                               *ngIf="firstname.errors.required" jhiTranslate="entity.validation.required">
+                            This field is required.
+                        </small>
+
+                        <small class="form-text text-danger"
+                               *ngIf="firstname.errors.minlength" jhiTranslate="entity.validation.minlength"
+                               [translateValues]="{min: 5}">
+                            This field is required to be at least 5 characters.
+                        </small>
+                    </div>
                 </div>
                 <div class="form-group">
                     <label class="form-control-label" jhiTranslate="imputationSqliApp.collaborator.lastname" for="field_lastname">Lastname</label>
-                    <input type="text" class="form-control" name="lastname" id="field_lastname"
-                        [(ngModel)]="collaborator.lastname" />
+                    <input type="text" class="form-control" name="lastname" id="field_lastname" #lastname="ngModel"
+                        [(ngModel)]="collaborator.lastname" minlength="5" required/>
+                    <div *ngIf="lastname.dirty && lastname.invalid">
+                        <small class="form-text text-danger"
+                               *ngIf="lastname.errors.required" jhiTranslate="entity.validation.required">
+                            This field is required.
+                        </small>
+
+                        <small class="form-text text-danger"
+                               *ngIf="lastname.errors.minlength" jhiTranslate="entity.validation.minlength"
+                               [translateValues]="{min: 5}">
+                            This field is required to be at least 5 characters.
+                        </small>
+                    </div>
                 </div>
                 <div class="form-group">
                     <label class="form-control-label" jhiTranslate="imputationSqliApp.collaborator.email" for="field_email">Email</label>
-                    <input type="text" class="form-control" name="email" id="field_email"
-                        [(ngModel)]="collaborator.email" />
+                    <input type="email" class="form-control" name="email" id="field_email" #email="ngModel"
+                        [(ngModel)]="collaborator.email" minlength="5" required maxlength="254" email />
+
+                    <div *ngIf="email.dirty && email.invalid">
+                        <small class="form-text text-danger"
+                               *ngIf="email.errors.required" jhiTranslate="entity.validation.required">
+                            This field is required.
+                        </small>
+
+                        <small class="form-text text-danger"
+                               *ngIf="email.errors.maxlength" jhiTranslate="entity.validation.maxlength"
+                               [translateValues]="{max: 100}">
+                            This field cannot be longer than 100 characters.
+                        </small>
+
+                        <small class="form-text text-danger"
+                               *ngIf="email.errors.minlength" jhiTranslate="entity.validation.minlength"
+                               [translateValues]="{min: 5}">
+                            This field is required to be at least 5 characters.
+                        </small>
+
+                        <small class="form-text text-danger"
+                               *ngIf="email.errors.email" jhiTranslate="global.messages.validate.email.invalid">
+                            Your email is invalid.
+                        </small>
+                    </div>
                 </div>
 
                 <div class="form-group">
