--- a/src/main/webapp/app/entities/project-type/project-type-update.component.html
+++ b/src/main/webapp/app/entities/project-type/project-type-update.component.html
@@ -11,8 +11,20 @@
                 </div>
                 <div class="form-group">
                     <label class="form-control-label" jhiTranslate="imputationSqliApp.projectType.name" for="field_name">Name</label>
-                    <input type="text" class="form-control" name="name" id="field_name"
-                        [(ngModel)]="projectType.name" />
+                    <input type="text" class="form-control" name="name" id="field_name" #name="ngModel"
+                        [(ngModel)]="projectType.name" required minlength="3" />
+                    <div *ngIf="name.dirty && name.invalid">
+                        <small class="form-text text-danger"
+                               *ngIf="name.errors.required" jhiTranslate="entity.validation.required">
+                            This field is required.
+                        </small>
+
+                        <small class="form-text text-danger"
+                               *ngIf="name.errors.minlength" jhiTranslate="entity.validation.minlength"
+                               [translateValues]="{min: 3}">
+                            This field cannot be longer than 3 characters.
+                        </small>
+                    </div>
                 </div>
 
             </div>
